--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pdf",
+  "name": "@emsn/react-pdf",
   "version": "4.2.0",
   "description": "Display PDFs in your React app as easily as if they were images.",
   "main": "dist/entry.js",
